@@ -92,7 +92,56 @@ set tepam::named_arguments_first 0
    test tepam-bug_fixes.bug3613644.2 "Bug fixes, bug 3613644 (2)"  \
       -body {puts "second try: [myns::myproc]"} \
       -result "" -output "second try: myvalue\n"
-     
+
+######## Bug a0e091b25d of tepam 0.5.0: Misformatted description in auto-generated help text ######
+
+   namespace eval ::bug {
+      tepam::procedure {tproc subproc1} {
+         -description "desc1."
+      } {}
+      
+      tepam::procedure {tproc subproc2} {
+         -description "desc2."
+      } {}
+      
+      tepam::procedure {tproc subproc3} {
+         -description "desc 3."
+      } {}
+      
+      tepam::procedure {tproc subproc4} {
+         -description "desc 4."
+      } {}
+      
+      tepam::procedure {tproc subproc5} {
+         -description "desc 5."
+      } {}
+   }
+
+   tcltest::test tepam-bug_fixes.bug3613644.1 "Bug fixes, bug 3613644 (1)"  \
+      -body {::bug::tproc -help} \
+      -result "" -output [join {
+         {NAME}
+         {      bug::tproc}
+         {SYNOPSIS}
+         {      bug::tproc subproc1}
+         {      bug::tproc subproc2}
+         {      bug::tproc subproc3}
+         {      bug::tproc subproc4}
+         {      bug::tproc subproc5}
+         {DESCRIPTION}
+         {      bug::tproc subproc1}
+         {         desc1.}
+         {      bug::tproc subproc2}
+         {         desc2.}
+         {      bug::tproc subproc3}
+         {         desc 3.}
+         {      bug::tproc subproc4}
+         {         desc 4.}
+         {      bug::tproc subproc5}
+         {         desc 5.}
+         {} {}
+      } "\n"]
+   
 ######## That's all ########
 
 ::tcltest::cleanupTests
@@ -102,9 +151,12 @@ return
 # Id: bug_fixes.test
 # Modifications:
 #
-# Revision 1.2  2013/10/14 droll
+# Revision 2016/03/04 droll
+# * Added test for reported bug a0e091b25d (Misformatted description in auto-generated help text)
+#
+# Revision 2013/10/14 droll
 # * Added test for reported bug 3613644
 #
-# Revision 1.1  2013/03/25 droll
+# Revision 2013/03/25 droll
 # * New test file, added tests to verify bug 3608951
 ##########################################################################
